# Modrinth-API-CPP

./: CMakeLists.txt
include/: ModrinthAPI.hpp  ModrinthEnums.hpp  ModrinthErrors.hpp  ModrinthProject.hpp  ModrinthStructs.hpp
src/: ModrinthAPI.cpp  ModrinthErrors.cpp  ModrinthProject.cpp
tests/: CMakeLists.txt  main.cpp
